# crucible

./: .gitignore  LICENSE  README.md  async.py  eval.py  eval_models.py  eval_prompts.py  eval_variables.py  main.py  my_types.py  pyproject.toml  requirements.txt  tasks
outputs/: 20240506160216.yaml  20240506161011.yaml  20240506161437.yaml  20240506162751.yaml  20240506162905.yaml  20240506163418.yaml  20240506163647.yaml  20240506164053.yaml  20240506164715.yaml  20240506173348.yaml  20240506173529.yaml  20240506173717.yaml  20240506174012.yaml  20240506175159.yaml  20240506175504.yaml  20240506175638.yaml  20240506180929.yaml  20240506181311.yaml  20240506182151.yaml  20240507101700.yaml  20240507102502.yaml  20240507105519.yaml  20240507110604.yaml  20240507111625.yaml  20240507112118.yaml  20240507113206.yaml  20240507113448.yaml  20240507113858.yaml  20240507114606.yaml  20240507114641.yaml  20240507114749.yaml  20240507120510.yaml  20240507121310.yaml  20240507122935.yaml  20240507124515.yaml  20240507124657.yaml  20240507124742.yaml  20240507130128.yaml
src/crucible/: eval_variables.py  main.py  main_cli.py  models.py  prompts.py  streamlit_app.py  variables.py
src/crucible/classes/: AnthropicModel.py  LocalModel.py  Model.py  OpenAIModel.py  Printer.py  Prompt.py  Report.py  Result.py  Runner.py  Task.py  Variable.py
src/crucible/utils/: Model.py  Printer.py  Runner.py  (+9 more)
test/: test_model_anthropic.py  test_model_local.py  test_model_openai.py  test_printer.py  test_runner.py
utils/: display.py  grading.py  io.py  llm.py  my_types.py  openai.py  runner.py
